[metadata]
name = motionpdf
version = 0.0.1
author = Ahmad Bamba
author_email = aebbamba@gmail.com
description = A script built on Tesseract-OCR for converting .pdf to .txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ahmad-Bamba/MotionPDF
license = MIT License
keywords = pdf, txt, text, plain text, convert, read, ocr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
